@@ -1,4 +1,4 @@
-package com.avaliadados.service;
+package com.avaliadados.service.avaliacao;
 
 import com.avaliadados.model.CollaboratorEntity;
 import com.avaliadados.model.ProjectCollaborator;
@@ -83,7 +83,7 @@ public class AvaliacaoService implements AvaliacaoProcessor {
                 if (id.isEmpty()) {
                     log.warn("  → colaborador '{}' não encontrado, usando ID vazio", name);
                 } else {
-                    ids = id.get(0);
+                    ids = id.getFirst();
                 }
 
                 SheetRow sr = new SheetRow();
